vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__for_generate_missing_end.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
gen: for i in 0 to 7 generate
  buf(i) <= data(i);

== tree ==
ForGenerateStatement
  StmtLabel
    Identifier 'gen'
    Colon
  ForGeneratePreamble
    Keyword(For)
    ParameterSpecification
      Identifier 'i'
      Keyword(In)
      BinaryExpression
        LiteralExpression
          AbstractLiteral '0'
        Keyword(To)
        LiteralExpression
          AbstractLiteral '7'
    Keyword(Generate)
  GenerateStatementBody
    ConcurrentSimpleSignalAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'buf'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    NameExpression
                      Name
                        NameDesignatorPrefix
                          Identifier 'i'
            RightPar
      LTE
      WaveformElements
        WaveformElement
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'data'
              ParenthesizedName
                LeftPar
                AssociationList
                  AssociationElement
                    ActualPart
                      ActualPartExpression
                        NameExpression
                          Name
                            NameDesignatorPrefix
                              Identifier 'i'
                RightPar
      SemiColon

== diagnostics ==
2:21 Expected(Node([GenerateEpilogue]))
