vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__guarded_block_variant.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nname : block (cond = true) is\nbegin\nend block;\",)"
---
BlockStatement
  BlockPreamble
    Label
      Identifier 'name'
      Colon
    Keyword(Block)
    ParenthesizedExpression
      LeftPar
      BinaryExpression
        NameExpression
          Name
            Identifier 'cond'
        EQ
        NameExpression
          Name
            Identifier 'true'
      RightPar
    Keyword(Is)
  Keyword(Begin)
  BlockEpilogue
    Keyword(End)
    Keyword(Block)
    SemiColon
