vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_empty_sensitivity.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nprocess () is\nbegin\nend process;\",)"
---
ProcessStatement
  ProcessStatementPreamble
    Keyword(Process)
    ParenthesizedProcessSensitivityList
      LeftPar
      RightPar
    Keyword(Is)
  Keyword(Begin)
  ProcessStatementEpilogue
    Keyword(End)
    Keyword(Process)
    SemiColon
