vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_statement.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nprocess\nbegin\nend process;\",)"
---
ProcessStatement
  ProcessStatementPreamble
    Keyword(Process)
  Keyword(Begin)
  ProcessStatementEpilogue
    Keyword(End)
    Keyword(Process)
    SemiColon
