vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__process_statement_end_postponed.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nprocess is\nbegin\nend postponed process;\",)"
---
ProcessStatement
  ProcessStatementPreamble
    Keyword(Process)
    Keyword(Is)
  Keyword(Begin)
  ProcessStatementEpilogue
    Keyword(End)
    Keyword(Postponed)
    Keyword(Process)
    SemiColon
